--- a/index.html
+++ b/index.html
@@ -8,15 +8,19 @@
     <link rel="stylesheet" type="text/css" href="css/mobile-nav.css" />
     <link rel="stylesheet" type="text/css" href="css/holo-dark/holo-dark.min.css" />
     <link rel="stylesheet" type="text/css" href="css/app.css" />
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
 
     <title>India GK Quiz - 2013/2014</title>
 </head>
 
 <body ng-controller="AppController">
-    
-    <!-- Angular Mobile Nav requires mobile-view inplace of ng-view -->
-    <mobile-view></mobile-view>
 
+    <!-- Angular Mobile Nav requires mobile-view inplace of ng-view -->
+
+    
+
+    <mobile-view></mobile-view>
 
 
     <!-- Comment out the following lines to test on the browser-->
@@ -48,12 +52,5 @@
     <script src="js/directives/timer.js"></script>
     <script src="js/directives/share.js"></script>
 
-
-    <!-- Bind events (deviceready, online etc) -->
-    <!-- 
-        <script type="text/javascript">
-            app.initialize();
-        </script>
-    -->
 </body>
 </html>
